# django-jotter

./: README.md  example.env  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  tox.ini
.github/workflows/: release.yml  test.yml
jotter_project/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/jotter/: admin.py  apps.py  models.py  urls.py  views.py
src/jotter/migrations/: 0001_initial.py  0002_notebook_slug_notebook_unique_notebook_slug_for_user.py
src/jotter/static/: jotter.css
src/jotter/templates/jotter/: base.html  index.html  note_confirm_delete.html  note_form.html  note_list.html  notebook_confirm_delete.html  notebook_form.html
templates/: index.html
templates/registration/: login.html
tests/: test_admin.py  test_basic_views.py
